--- a/.github/workflows/vue.js.yml
+++ b/.github/workflows/vue.js.yml
@@ -1,19 +1,14 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Node.js CI
-
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     
   workflow_dispatch:
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     
@@ -21,7 +16,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 16.x
-
     - name: Build vite
       run: |
           npm install
@@ -31,11 +25,18 @@ jobs:
 
     - name: Copy static files
       run: |
-          cp -a client/dist/. dist/
-          cp composer.json dist/
+          mkdir dist/server/public/
+          cp -a client/dist/. dist/server/public/
+          cp -a server/. dist/server/
+          cp package.json dist/
           
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4.2.3
       with:
           branch: gh-pages # The branch the action should deploy to.
+          folder: dist/server/public # The folder the action should deploy.
+    - name: Deploy 🚀
+      uses: JamesIves/github-pages-deploy-action@v4.2.3
+      with:
+          branch: node-deploy # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
