--- a/.github/workflows/vue.js.yml
+++ b/.github/workflows/vue.js.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Copy static files
       run: |
-          mkdir dist/Server/public/
+          mkdir -p dist/Server/public/
           cp -a client/dist/. dist/Server/public/
           cp -a server/. dist/Server/
           cp package.json dist/
