--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "url": "git+https://github.com/Reed-Williams/copyClasswork.git"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "dotenv": "^16.0.0",
+    "bcrypt": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
+
   }
 }
