--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+      "@types/google.accounts": "^0.0.0",
+      "@types/gapi.client":"^1.0.5",
     "bulma" : "^0.9.3",
     "vue-router" : "^4.0.12",
     "@fortawesome/fontawesome-free" : "^6.0.0",
